NGINX/ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-secondary-default-net-policy
  namespace: nginx
spec:
  ingress:
    - ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - nginx-secondary
    matchLabels:
      app.kubernetes.io/instance: nginx-secondary
  policyTypes:
    - Ingress
status: {}
